@@ -2,6 +2,7 @@ All notable changes to this package will be documented in this file. For a
 complete changelog, see https://github.com/JolleJolles/pythutils/commits/
 
 Not yet integrated
+* Added checkroi function to make sure roi is within resolution region
 * improved listfiles function to include full dir for nested
 * added move file function
 * Added new filechecker function
